--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ant-design-pro",
-  "version": "4.2.0",
+  "name": "{{name}}",
+  "version": "1.0.0",
   "private": true,
-  "description": "An out-of-box UI solution for enterprise applications",
+  "description": "{{description}}",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
@@ -38,6 +38,7 @@
       "prettier --write"
     ]
   },
+  "author": "{{author}}",
   "browserslist": [
     "> 1%",
     "last 2 versions",
