--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.0.0",
-    "@ant-design/pro-layout": "^6.4.18",
-    "@ant-design/pro-table": "^2.5.3",
-    "antd": "^4.5.3",
+    "@ant-design/icons": "^4.7.0",
+    "@ant-design/pro-layout": "^6.26.0",
+    "@ant-design/pro-table": "^2.54.3",
+    "@dzo/com": "^1.0.1",
+    "antd": "^4.16.13",
     "classnames": "^2.2.6",
-    "dz-com": "^1.6.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
@@ -61,8 +61,8 @@
     "react-dom": "^16.13.0",
     "react-helmet-async": "^1.0.4",
     "store": "^2.0.12",
-    "umi": "^3.2.14",
-    "umi-request": "^1.0.8",
+    "umi": "^3.5.19",
+    "umi-request": "^1.4.0",
     "use-merge-value": "^1.0.1",
     "web-watermark": "^1.0.3"
   },
@@ -83,6 +83,7 @@
     "@umijs/preset-react": "^1.4.8",
     "@umijs/preset-ui": "^2.0.9",
     "@umijs/yorkie": "^2.0.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "carlo": "^0.9.46",
     "chalk": "^4.0.0",
     "cross-env": "^7.0.0",
